--- a/index.html
+++ b/index.html
@@ -11,5 +11,10 @@
 	This is first commit
 	This is second commit
 	This GitHub line
+
+	<<div class="footer">
+		footer
+	</div>
+
 </body>
 </html>
